v3.4.0 - 1.21.1